add 18+1 race categories

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -48,26 +48,107 @@
 
         <label class="block-label selection-button-radio" for="radio-1">
           <input id="radio-1" type="radio" name="radio-group" value="White">
-          White
+          White All
         </label>
 
         <label class="block-label selection-button-radio" for="radio-2">
-          <input id="radio-2" type="radio" name="radio-group" value="Black">
-          Black
+          <input id="radio-2" type="radio" name="radio-group" value="EnglishWelshScottishNorthernIrishOrWhiteBritish">
+          English / Welsh / Scottish / Northern Irish / White British
         </label>
 
         <label class="block-label selection-button-radio" for="radio-3">
-          <input id="radio-3" type="radio" name="radio-group" value="Asian">
-          Asian
+          <input id="radio-3" type="radio" name="radio-group" value="Irish">
+          Irish
         </label>
 
         <label class="block-label selection-button-radio" for="radio-4">
-          <input id="radio-4" type="radio" name="radio-group" value="Mixed">
-          Mixed
+          <input id="radio-4" type="radio" name="radio-group" value="GypsyOrIrishTraveller">
+          Gypsy or Irish Traveller
         </label>
 
         <label class="block-label selection-button-radio" for="radio-5">
-          <input id="radio-5" type="radio" name="radio-group" value="Other">
+          <input id="radio-5" type="radio" name="radio-group" value="Mixed">
+          Mixed All
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-6">
+          <input id="radio-6" type="radio" name="radio-group" value="WhiteAndCaribbean">
+          White and Black Caribbean
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-7">
+          <input id="radio-7" type="radio" name="radio-group" value="WhiteAndAfrican">
+          White and Black African
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-8">
+          <input id="radio-8" type="radio" name="radio-group" value="WhiteAndAsian">
+          White and Asian
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-9">
+          <input id="radio-9" type="radio" name="radio-group" value="MixedOther">
+          Any other Mixed / Multiple ethnic background
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-10">
+          <input id="radio-10" type="radio" name="radio-group" value="Asian">
+          Asian All
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-11">
+          <input id="radio-11" type="radio" name="radio-group" value="Indian">
+          Indian
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-12">
+          <input id="radio-12" type="radio" name="radio-group" value="Pakistani">
+          Pakistani
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-13">
+          <input id="radio-13" type="radio" name="radio-group" value="Bangladeshi">
+          Bangladeshi
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-14">
+          <input id="radio-14" type="radio" name="radio-group" value="Chinese">
+          Chinese
+        </label>
+
+
+        <label class="block-label selection-button-radio" for="radio-15">
+          <input id="radio-15" type="radio" name="radio-group" value="AsianOther">
+          Any other Asian background
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-16">
+          <input id="radio-16" type="radio" name="radio-group" value="Black">
+          Black All
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-17">
+          <input id="radio-17" type="radio" name="radio-group" value="African">
+          African
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-18">
+          <input id="radio-18" type="radio" name="radio-group" value="Caribbean">
+          Caribbean
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-19">
+          <input id="radio-19" type="radio" name="radio-group" value="BlackOther">
+          Any other Black / African / Caribbean background
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-20">
+          <input id="radio-20" type="radio" name="radio-group" value="Arab">
+          Arab
+        </label>
+
+        <label class="block-label selection-button-radio" for="radio-21">
+          <input id="radio-21" type="radio" name="radio-group" value="Other">
           Other
         </label>
       </fieldset>
