--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -37,10 +37,6 @@
   <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/583857/Progress_8_school_performance_measure_Jan_17.pdf">how Attainment 8 is measured.</a>
 </p>
 
-
-
-
-
 <div class="grid-row question-tabs" id="navigation-tabs">
   <ul class="tabs-nav">
     <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
@@ -75,6 +71,7 @@
 </div>
 
 <div class="grid-row graph-section" id="income-section">
+<p> Eligibility for free school meals has been used as an indication of lower household income </p>
   <div class="column-whole question-graph">
       <div id="fsm-pyramid-container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
   </div>
