--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -20,10 +20,11 @@
     list-style: none;
 
     li {
+      text-align: center;
       font-family: "nta", Arial, sans-serif;
       font-weight: 400;
       text-transform: none;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.14286;
       padding: 0;
       margin: 0;
@@ -43,7 +44,6 @@
     }
 
     .selected {
-      color:red;
       a {
         color:$black;
         text-decoration: none;
