--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 <% content_for :inside_header do %>
   <div class="header-proposition" >
-    <a href="/" id="proposition-name" >Race Disparity Audit</a>
+    <a href="/" id="proposition-name" >Race disparity in the public sector</a>
   </div>
 <% end %>
 
