--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -32,10 +32,12 @@
 </p>
 
 <p>
- Results are calculated from a combination of student grades where A* = 8, A = 7, B = 6, C = 5, and so on. English and Mathematics are double-weighted to prioritise their importance in the national curriculum. Find out more about
+ Results are calculated from a combination of student grades where A* = 8, A = 7, B = 6, C = 5, and so on. English and Mathematics scores are doubled, to prioritise their importance in the national curriculum. Find out more about
 
   <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/583857/Progress_8_school_performance_measure_Jan_17.pdf">how Attainment 8 is measured.</a>
 </p>
+
+<p>The highest possible score for this measure is 8, the lowest score is 0.</p>
 
 <div class="grid-row question-tabs" id="navigation-tabs">
   <ul class="tabs-nav">
@@ -85,11 +87,10 @@
     <p>Find out <a href= "https://www.ons.gov.uk/ons/guide-method/measuring-equality/equality/measuring-equality--a-guide/ethnic-group-statistics--a-guide-for-the-collection-and-classification-of-ethnicity-data.pdf">how we collect and report on race. </a> </p>
 
     <p>
-      Race categories may be combined if the number of people in one category is very small. For example, Black Caribbean, Black African and Black other may be combined into one category, as "Black".
+      Race categories may be combined depending on how the information was collected. For example, Black Caribbean, Black African and Black other may sometimes be combined into one category, as "Black".
     </p>
 
-    <br>
-    <br>
+    <h3 class="heading-medium"> Summary </h3>
 
     <p>
       Girls are ahead of boys and the highest-performing local authority areas for attainment 8 are concentrated in London and the south, while the majority of the lowest-performing areas are in the north and midlands.
