--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -83,7 +83,7 @@
     <p>Find out <a href= "https://www.ons.gov.uk/ons/guide-method/measuring-equality/equality/measuring-equality--a-guide/ethnic-group-statistics--a-guide-for-the-collection-and-classification-of-ethnicity-data.pdf">how we collect and report on race. </a> </p>
 
     <p>
-      Race categories may be combined depending on how the information was collected. For example, Black Caribbean, Black African and Black other may sometimes be combined into one category, as "Black".
+      Race categories may be combined depending on how the information was collected or to show a value for the whole group. For example, Black Caribbean, Black African and Black other may sometimes be combined into one category, as "Black".
     </p>
 
     <h3 class="heading-medium"> Summary </h3>
