--- a/app/views/taxonomy_level/question.html.erb
+++ b/app/views/taxonomy_level/question.html.erb
@@ -1,7 +1,7 @@
 <div class="breadcrumbs">
   <ol>
     <% @taxonomy_level.breadcrumbs.each do |crumb| %>
-      <li> <a href="<%=crumb.link%>"><%=crumb.display_name%></a></li>
+      <li> <a href="<%=crumb.link%>"><%=crumb.breadcrumb_name%></a></li>
     <% end %>
   </ol>
 </div>
