fix bug with white not being selectable on front page & make graphs load on page load for unemployment

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -56,8 +56,9 @@
         </label>
 
         <label class="block-label selection-button-radio" for="radio-2">
-          <span class="heading-small"><input id="radio-2" type="radio" name="radio-group" value="EnglishWelshScottishNorthernIrishOrWhiteBritish">
-          English / Welsh / Scottish / Northern Irish / White British
+          <input id="radio-2" type="radio" name="radio-group" value="EnglishWelshScottishNorthernIrishOrWhiteBritish">
+          <span class="heading-small">
+            English / Welsh / Scottish / Northern Irish / White British
           </span>
         </label>
 
@@ -120,7 +121,6 @@
           <input id="radio-14" type="radio" name="radio-group" value="Chinese">
           <span class="heading-small">Chinese</span>
         </label>
-
 
         <label class="block-label selection-button-radio" for="radio-15">
           <input id="radio-15" type="radio" name="radio-group" value="AsianOther">
