--- a/app/views/taxonomy_level/topics_filtered.html.erb
+++ b/app/views/taxonomy_level/topics_filtered.html.erb
@@ -8,32 +8,7 @@
 
 <div class = "grid-row">
   <div class = "column-third">
-    <div>
-      <h3 class="heading-medium">
-        Contents
-      </h3>
-      <ul class="list">
-        <% @topic.taxonomy_levels.each do |level| %>
-          <li> <a href="#<%=level.anchor%>"> <%= level.display_name %> </a> </li>
-        <% end %>
-      </ul>
-    </div>
-
-    <div>
-      <h3 class="heading-medium">
-        Compare to the national average
-      </h3>
-
-      <ul class="list">
-        <li> <a href="white"> White </a></li>
-        <li> <a href="black"> Black </a></li>
-        <li> <a href="asian"> Asian </a></li>
-        <li> <a href="mixed"> Mixed</a></li>
-        <li> <a href="other"> Other </a></li>
-      </ul>
-    </div>
-
-    <div>
+        <div>
       <h3 class="heading-medium">
         View a different Topic
       </h3>
@@ -65,11 +40,29 @@
     <p>
       In order to understand why there are differences, you can find out more information on the measure by clicking on the relevant links.
     </p>
+  </div>
+</div>
 
-    <h3 class="heading-medium">
-      <%= @topic.measures.count %> measures available for <%= @topic.display_name %>
-    </h3>
+<hr>
 
+<div class ="grid-row">
+  <div class="column-third">
+    <div>
+      <h3 class="heading-medium">
+        Compare to the national average
+      </h3>
+
+      <ul class="list">
+        <li> <a href="white"> White </a></li>
+        <li> <a href="black"> Black </a></li>
+        <li> <a href="asian"> Asian </a></li>
+        <li> <a href="mixed"> Mixed</a></li>
+        <li> <a href="other"> Other </a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="column-two-thirds">
     <h3 class="heading-medium">
       <%= @topic.measures.count %> measures available for <%= @topic.display_name %>
     </h3>
