--- a/app/views/taxonomy_level/topics_filtered.html.erb
+++ b/app/views/taxonomy_level/topics_filtered.html.erb
@@ -8,14 +8,28 @@
 
 <div class = "grid-row">
   <div class = "column-third">
-        <div>
+    <div>
       <h3 class="heading-medium">
-        View a different Topic
+        Topics
       </h3>
       <ul class="list">
         <% TaxonomyLevel.topics.each do |t| %>
           <li> <a href="/topics/<%= t.id %>"> <%=t.display_name %> </a></li>
         <% end %>
+      </ul>
+    </div>
+
+    <div>
+      <h3 class="heading-medium">
+        Compare to the national average
+      </h3>
+
+      <ul class="list">
+        <li> <a href="white"> White </a></li>
+        <li> <a href="black"> Black </a></li>
+        <li> <a href="asian"> Asian </a></li>
+        <li> <a href="mixed"> Mixed</a></li>
+        <li> <a href="other"> Other </a></li>
       </ul>
     </div>
   </div>
@@ -40,29 +54,7 @@
     <p>
       In order to understand why there are differences, you can find out more information on the measure by clicking on the relevant links.
     </p>
-  </div>
-</div>
 
-<hr>
-
-<div class ="grid-row">
-  <div class="column-third">
-    <div>
-      <h3 class="heading-medium">
-        Compare to the national average
-      </h3>
-
-      <ul class="list">
-        <li> <a href="white"> White </a></li>
-        <li> <a href="black"> Black </a></li>
-        <li> <a href="asian"> Asian </a></li>
-        <li> <a href="mixed"> Mixed</a></li>
-        <li> <a href="other"> Other </a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="column-two-thirds">
     <h3 class="heading-medium">
       <%= @topic.measures.count %> measures available for <%= @topic.display_name %>
     </h3>
