edit content on unemployment page

--- a/app/views/taxonomy_level/unemployment.html.erb
+++ b/app/views/taxonomy_level/unemployment.html.erb
@@ -78,7 +78,6 @@
 
 <div class="grid-row">
   <div class="column-whole">
-  </div>
 
     <p>Find out <a href= "https://www.ons.gov.uk/ons/guide-method/measuring-equality/equality/measuring-equality--a-guide/ethnic-group-statistics--a-guide-for-the-collection-and-classification-of-ethnicity-data.pdf">how we collect and report on race. </a> </p>
 
@@ -87,29 +86,24 @@
     </p>
 
     <h3 class="heading-medium"> Summary </h3>
+  <p>
+  Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
+  </p>
 
-    <p>
-      Girls are ahead of boys and the highest-performing local authority areas for attainment 8 are concentrated in London and the south, while the majority of the lowest-performing areas are in the north and midlands.
-    </p>
+  <p>
+  In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
+  </p>
 
-    <p>
-      The GCSE and equivalent results continue to vary between different race groups. Within each of these broader race groupings, the minor race groups show further variability:
-    </p>
-
-    <ul class="list-bullet">
-      <li>Chinese pupils are the highest achieving group.</li>
-      <li> Pupils from a black background are the lowest performing group although black pupils are progressing above the national average.</li>
-      <li>Pupils from an Asian background are performing above the national average.</li>
-      <li>Pupils from a mixed background are also performing above the national level.</li>
-      <li>Within the minor race groupings, Indian pupils are performing well above the national average </li>
-      <li>Gypsy/Roma pupils are the lowest performers.</li>
-    </ul>
+  <p>
+  Whilst unemployment for both men and women is just above 5% in the UK, black men are more likely to be unemployed than black women, and Pakistani or Bangladeshi women are far more likely to be unemployed than Pakistani or Bangladeshi men.
+  </p>
   <br>
   <br>
   <p> <a href="http://www.gov.uk">Download data in csv or xls format</a> for all of England or a local authority.</p>
 
   <p>Read the <a href="/attainment8/metadata">further information and guidance </a>about the data in the tables.
   </p>
+  </div>
 </div>
 
 
