--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -25,7 +25,7 @@
 
     <p > You can browse all the available data or find something more specific using the options and filters below. </p>
 
-    <div id="navigation-tabs">
+    <div id="navigation-tabs" class="homepage">
       <ul class = "tabs-nav">
         <li id="<%= HomepageController::TOPIC %>-selector" class="selected">
           <a href="#">Topic</a>
