--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -7,35 +7,57 @@
   </ol>
 </div>
 
-<h1 class="heading-large">
-  Unemployment rates (in labour force)
+<h1 class="heading-xlarge">
+  Unemployment rates
 </h1>
 
-
 <div class="grid-row question-tabs" id="navigation-tabs">
-  <div class="column-whole">
-    <ul class="tabs-nav">
-      <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
-      <li id="gender-selector"><a href="#gender-section">Gender </a></li>
-      <li id="age-bracket-selector"><a href="#age-section">Age bracket </a></li>
-      <li id="time-selector"><a href="#time-section">Time Series </a></li>
-    </ul>
+  <div class="column-two-thirds">
+
+    <p class="lede"> Find out how unemployment rates differ for people of various ethnicities in the UK.</p>
+    <div class = "tabs-container">
+
+      <ul class="tabs-nav">
+        <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
+        <li id="gender-selector"><a href="#gender-section">Gender </a></li>
+        <li id="age-bracket-selector"><a href="#age-section">Age bracket </a></li>
+        <li id="time-selector"><a href="#time-section">Time Series </a></li>
+      </ul>
+    </div>
   </div>
 </div>
 
-<div class="grid-row graph-section" id="ethnicity-section">
-  <div class="column-two-thirds question-graph">
-    <h3 class="heading-medium">
-      All
-    </h3>
+<div class="graph-section" id="ethnicity-section">
+  <div class="grid-row">
+    <div class="column-whole question-graph">
+      <h3 class="heading-medium">
+        All
+      </h3>
 
-    <p>
-     The rate of UK unemployment as a percentage of the potential labour force
-    </p>
+      <p>
+       The rate of UK unemployment as a percentage of the potential labour force
+      </p>
 
-    <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+      <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+    </div>
+
+    <div class="column-half">
+      <div class="govuk-metadata">
+        <dl>
+          <dt> Source:</dt> <dd><a href="#">
+          2011 Census and the Labour Force Survey (LFS)</a></dd>
+          <dt>First Published: </dt> <dd>13/11/2014</dd>
+        </dl>
+      </div>
+    </div>
+
+    <div class="column-half">
+      <button class="button">Download</button>
+    </div>
+
   </div>
 </div>
+
 
 <div class="graph-section" id="gender-section">
   <div class="grid-row" >
@@ -50,15 +72,9 @@
     <div class="column-half">
       <div class="govuk-metadata">
         <dl>
-          <dt> From:</dt> <dd><a href="#">
+          <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
           <dt>First Published: </dt> <dd>13/11/2014</dd>
-          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
-          <dt> Revisions:</dt> <dd> <a href="#">National Archive</a></dd>
-          <dt> Next Update:</dt> <dd> 01/07/2017</dd>
-          <dt> Frequency:</dt> <dd> Ad Hoc</dd>
-          <dt> Contact:</dt> <dd> gabriel.kite@dwp.gsi.gov.uk</dd>
-          <dt> Related Publications:</dt> <dd><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity/ethnicity/articles/ethnicityandthelabourmarket2011censusenglandandwales/previousReleases"> Official Statistic </a> </dd>
         </dl>
       </div>
     </div>
@@ -66,6 +82,7 @@
     <div class="column-half">
       <button class="button">Download</button>
     </div>
+
     <div class="column-two-thirds">
       <p> White, Black, Bangladeshi/Pakistani, Indian, Other ethnic backgrounds. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups </p>
 
@@ -96,7 +113,7 @@
 
 <div class="graph-section" id="age-section">
   <div class="grid-row">
-    <div class="column-two-thirds question-graph">
+    <div class="column-whole question-graph">
       <h3 class="heading-medium"> Age </h3>
 
       <p> Age groups are 16-24, 25-49, 50+ to cover everyone of a working age. </p>
@@ -107,15 +124,9 @@
       <div class="column-half">
         <div class="govuk-metadata">
           <dl>
-            <dt> From:</dt> <dd><a href="#">
+            <dt> Source:</dt> <dd><a href="#">
             2011 Census and the Labour Force Survey (LFS)</a></dd>
             <dt>First Published: </dt> <dd>13/11/2014</dd>
-            <dt>Last Updated: </dt> <dd>11/12/2015</dd>
-            <dt> Revisions:</dt> <dd> <a href="#">National Archive</a></dd>
-            <dt> Next Update:</dt> <dd> 01/07/2017</dd>
-            <dt> Frequency:</dt> <dd> Ad Hoc</dd>
-            <dt> Contact:</dt> <dd> gabriel.kite@dwp.gsi.gov.uk</dd>
-            <dt> Related Publications:</dt> <dd><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity/ethnicity/articles/ethnicityandthelabourmarket2011censusenglandandwales/previousReleases"> Official Statistic </a> </dd>
           </dl>
         </div>
       </div>
@@ -153,6 +164,10 @@
 
 <div class="grid-row">
   <div class="column-two-thirds">
+     <h3 class="heading-medium"> Learn about this measure</h3>
+
+    <p> Find out what this measure means, get a summary of the key insights and find out how the data was collected. </p>
+
     <div class="accordions-container container">
       <div class="accordion">
         <div class="accordion__header" >
@@ -204,6 +219,7 @@
     </div>
 
     <div class="accordions-container container">
+
       <div class="accordion">
         <div class="accordion__header">
           <h2><button> Publishing Details</button></h2>
