--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -15,7 +15,10 @@
 
 
 #navigation-tabs {
-  padding-bottom: 60px;
+  &.homepage {
+    padding-bottom: 60px;
+  }
+
   .tabs-nav {
     list-style: none;
 
@@ -28,9 +31,9 @@
       line-height: 1.14286;
       padding: 0;
       margin: 0;
+      border-bottom: 1px solid $grey-2;
       float: left;
       width: 16%;
-      border-bottom: 1px solid $grey-2;
       padding-top: 5px;
 
       a {
