--- a/app/assets/stylesheets/measure.scss
+++ b/app/assets/stylesheets/measure.scss
@@ -5,9 +5,19 @@
   background:image-url("icon-plus-minus.svg");
   height: 16px;
   width: 16px;
-  float:right;
-  background-position: 0 0;
+  background-position: 0 -16px;
+  position:absolute;
+  right:15px;
+  top: 50%;
+  margin-top: -8px;
+
+  &.open{
+    background-position: 0 0;
+  }
+
 }
+
+
 
 .accordions-container {
   border-bottom: 1px solid $grey-2;
@@ -16,14 +26,24 @@
 .accordion__header {
   border-top: 1px solid $grey-2;
   position: relative;
+  padding-top: 14px;
+  padding-bottom: 12px;
+  cursor: pointer;
+
+  &:hover {
+    background: $grey-4;
+  }
+
   button {
-    cursor: pointer;
-    background-color: $white;
     font-size: 24px;
     font-weight: 700;
     line-height: 1.25;
     border: 0;
     color: $link-colour;
+    padding-left:0;
+    text-align: left;
+    cursor: pointer;
+    background:none;
   }
 
 }
